# corrective-RAG-academic-analyser

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_grader_issue.py
.github/workflows/: ci.yml
data/processed/: chunk_log.json  eval_dataset.json  evaluation_results_crag_gemini-3-1-flash-lite.csv  evaluation_results_naive_gemini-3-1-flash-lite.csv  metadata.json  parse_log.json
data/processed/chunks/: 0810.5078_chunks.json  1002.1164_chunks.json  1003.3081_chunks.json  1006.2840_chunks.json  1007.5016_chunks.json  1109.2261_chunks.json  1109.2262_chunks.json  1206.6209_chunks.json  1306.0089_chunks.json  1402.2228_chunks.json  1409.1484_chunks.json  1502.07055_chunks.json  1510.08510_chunks.json  1511.05497_chunks.json  1512.00242_chunks.json  1512.05702_chunks.json  (+465 more)
scratch/: analyze_direct_hits.py  check_fallbacks.py  diagnostic.py  direct_hits_output.txt  direct_hits_output_0.txt  populate_latencies.py  segment_results.py  test_grader_structured.py  test_retry_accumulation.py  test_single_ragas.py
src/: config.py
src/api/: server.py
src/evaluation/: evaluation.py  generate_eval_dataset.py  graph_naive.py  ragas_only_evaluation.py  run_eval.py  visualisation.py
src/ingestion/: arxiv_downloader.py  chunker.py  pdf_parser.py
src/pipeline/: graph.py  llm_factory.py  state.py
src/utils/: metadata_utils.py
src/vectorstore/: embeddings.py  faiss_store.py
tests/: test_chunker.py  test_context_precision.py  test_extraction.py  test_faiss_store.py  test_latency_metrics.py  test_only_pipeline.py  test_pipeline.py
ui/: app.py
(+488 files in other folders)
