[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crag"
version = "0.1.0"
description = "Corrective Retrieval Augmented Generation (CRAG) Implementation"
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "langgraph>=0.2.0,<0.3.0",
    "faiss-cpu>=1.8.0,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pymupdf>=1.24.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "streamlit>=1.38.0,<2.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "tavily-python>=0.5.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "arxiv>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
